compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__semicolons.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 646
expression: "{ 2 + 3; - -5; }"
snapshot_kind: text
---
----- SOURCE CODE
{ 2 + 3; - -5; }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:8
  │
1 │ { 2 + 3; - -5; }
  │        ^ Remove this semicolon

Hint: Semicolons used to be whitespace and did nothing.
You can safely remove them without your program changing.
